<resources>
    <string-array name="imageExtension" translatable="false">
        <item>jpg</item>
        <item>png</item>
        <item>jpeg</item>
    </string-array>
    <string name="app_name" translatable="false">ERL</string>
    <string name="CHANNEL_ID" translatable="false">ERL</string>
    <string name="font_family_regular" translatable="false">fonts/Montserrat-Regular.otf</string>
    <string name="google_key_api" translatable="false">AIzaSyBcxNZeUe5zUqDVXAvk3fOATaXROrpbUhE</string>
    <string name="error_access_denied">Access Denied</string>
    <string name="error_bad_request_400">The request could not be understood by the server due to malformed syntax.</string>
    <string name="error_unauthorized_401">The request requires user authentication. The response MUST include a WWW-Authenticate header field.</string>
    <string name="error_forbidden_403">The server understood the request but is refusing to fulfill it.</string>
    <string name="error_not_found_404">The server has not found anything matching the Request-URI.</string>
    <string name="error_method_not_allowed_405">The method specified in the Request-Line is not allowed for the resource identified by the Request-URI.</string>
    <string name="error_request_timeout_408">Your request timed out. Please retry the request.</string>
    <string name="error_request_entity_too_large_413">The server is refusing to process a request because the request entity is larger than the server is willing or able to process.</string>
    <string name="error_request_uri_too_long_414">The server is refusing to service the request because the Request-URI is longer than the server is willing to interpret.</string>
    <string name="error_internal_server_error_500">The server encountered an unexpected condition which prevented it from fulfilling the request.</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="msg_unauthorized">We are signing you out as we found your account access from another device</string>
    <string name="error_network">There is a problem connecting to the Server, please check your network connection, and then try again.</string>
    <string name="error_internet_connection">Please check your internet connection</string>
    <string name="error_accept_terms_conditions">You must accept the terms and conditions to register an account</string>
    <string name="ERR100">Parameters Missing</string>
    <string name="ERR101">Requested data is empty.</string>
    <string name="ERR102">First parameters must be an array</string>
    <string name="ERR103">You have entered an invalid email address.</string>
    <string name="ERR104">You have entered an invalid password.</string>
    <string name="ERR105">You have entered invalid access code</string>
    <string name="ERR106">You have added an incorrect current password.</string>
    <string name="ERR107">You can\'t use the old password.</string>
    <string name="ERR108">Order not found</string>
    <string name="ERR109">You can\'t cancel your order. Your order is under process please ask admin to cancel it.</string>
    <string name="ERR110">Order is not confirm yet</string>
    <string name="ERR111">Order is not ready yet</string>
    <string name="ERR112">Address not found</string>
    <string name="ERR113">Email already registered</string>
    <string name="ERR114">Phone number already registered</string>
    <string name="ERR115">Client not found</string>
    <string name="dash_sign">-</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_forgot_password">Forgot Password?</string>
    <string name="lbl_dont_have_an_account">Don\'t have an Account?</string>
    <string name="lbl_register_here">Register here</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email_or_phone">Email or Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="lbl_already_have_an_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="info_reset_password">We just need your registered Email Id\nto send your password reset instructions.</string>
    <string name="lbl_verification">Verification</string>
    <string name="lbl_verification_code">Verification Code</string>
    <string name="lbl_display_verification_code_hint">Please type the verification code sent to your email %s</string>
    <string name="lbl_dont_receive_the_code">Don\'t receive the code?</string>
    <string name="lbl_resend">Resend</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_dashboard">Dashboard</string>
    <string name="error_verify_code">Verification code is not valid</string>
    <string name="create_new_password">Create New Password</string>
    <string name="my_profile">My Profile</string>
    <string name="my_order">My Order</string>
    <string name="my_orders">My Orders</string>
    <string name="order_history">Order History</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="about_app">About App</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_new_password">Confirm New Password</string>
    <string name="lbl_select_item">Select Item</string>
    <string name="lbl_display_tab_name_and_count">%s (%d)</string>
    <string name="lbl_display_price">AED %s</string>
    <string name="lbl_display_added_price">+%s AED</string>
    <string name="lbl_display_deduct_price">-%s AED</string>
    <string name="add">Add</string>
    <string name="add_item">Add Item</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_pick_up_time_slot">Pickup time slot</string>
    <string name="lbl_deliver_time_slot">Deliver time slot</string>
    <string name="lbl_select_date">Select Date:</string>
    <string name="lbl_select_time">Select Time:</string>
    <string name="lbl_address">Address:</string>
    <string name="lbl_change_add_Address">change address / add address</string>
    <string name="lbl_order_details">Order Details:</string>
    <string name="lbl_item">Item:</string>
    <string name="lbl_qty">Qty</string>
    <string name="lbl_update">Update:</string>
    <string name="lbl_display_selected_item_title">%s:</string>
    <string name="next">Next</string>
    <string name="lbl_from_time">From Time</string>
    <string name="lbl_to_time">To Time</string>
    <string name="lbl_select">Select</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_hour">Hour</string>
    <string name="lbl_minute">Minute</string>
    <string name="lbl_display_time">%s to %s</string>
    <string name="msg_location_permission">This application needs access to your location.</string>
    <string name="msg_storage_permission">This application needs access to your storage</string>
    <string name="msg_gps_enable">GPS is disabled in your device. Would you like to enable it?\n\nYou must select \"High Accuracy\" from location mode.</string>
    <string name="lbl_choose_address">Choose an address</string>
    <string name="lbl_use_this_Address">Use this address</string>
    <string name="hint_house_number">Flat/House Name &amp; Number</string>
    <string name="hint_street">Street</string>
    <string name="hint_landmark">Landmark</string>
    <string name="hint_city">City</string>
    <string name="hint_address_type">Address Type</string>
    <string name="hint_area">Area</string>
    <string name="change_address">Change Address</string>
    <string name="search">search</string>
    <string name="msg_select_city_first">Please select city first</string>
    <string name="msg_select_address_first">Please select address first</string>
    <string name="lbl_select_address">Select Address</string>
    <string name="choose_new_address">Choose New Address</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="msg_delete_address">Are you sure you want to delete this address?</string>
    <string name="lbl_order_number">Order No:</string>
    <string name="lbl_date">Date:</string>
    <string name="lbl_status">Status:</string>
    <string name="lbl_order_status">Order Status:</string>
    <string name="lbl_price">Price:</string>
    <string name="lbl_order_amount">Order Amount:</string>
    <string name="lbl_order_type">Order Type:</string>
    <string name="lbl_number_of_paces">Number of Paces:</string>
    <string name="lbl_view_more">View More</string>
    <string name="lbl_delivery_time">Delivery Time:</string>
    <string name="lbl_total_paces">Total Paces:</string>
    <string name="lbl_total_price">Total Price:</string>
    <string name="msg_currently_no_service_available">Currently there are no service available in your area. Please change address</string>
    <string name="msg_empty_pickup_slot">No pickup slot available. Please select another date</string>
    <string name="msg_empty_deliver_slot">No deliver slot available. Please select another date</string>
    <string name="msg_cancel_order">Are you sure you want to cancel this order?</string>
    <string name="save">Save</string>
    <string name="lbl_full_name">Full Name:</string>
    <string name="lbl_mobile_number">Mobile Number:</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_select_image_from">Select Image From:</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="done">Done</string>
    <string name="albums">Albums</string>
    <string name="error_image_format">Invalid file format. Please choose the JPG,PNG and JPEG format</string>
    <string name="lbl_crop_image">Crop Image</string>
    <string name="msg_clear_cart">Are you sure want to change service type? Once you changed service type your cart will be clear.</string>
    <string name="lbl_thank_you">Thank You</string>
    <string name="msg_your_order_has_been_successfully_placed">Your order has been successfully placed.</string>
    <string name="hint_say_something">Say Something&#8230;</string>
    <string name="lbl_order_summery">Order Summary</string>
    <string name="lbl_invoice">Invoice</string>
    <string name="lbl_pay">Pay</string>
    <string name="lbl_available_wallet">Available Wallet:</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_contact_us">Contact us</string>
    <string name="lbl_call">Call</string>
    <string name="lbl_whatsapp">Whatsapp</string>
    <string name="lbl_erl_wallet_balance">Erl Wallet Balance</string>
    <string name="lbl_coupon_code_for_add_money_to_wallet">Coupon code for add money to wallet</string>
    <string name="lbl_view_transaction_history">View Transaction History</string>
    <string name="lbl_payment_success_title">Transaction Completed Successfully</string>
    <string name="lbl_payment_success_sub_title">Thank you for your billing</string>
    <string name="feedback">Give Feedback</string>
    <string name="write_review">Write review here...</string>
    <string name="submit">Submit</string>
    <string name="service_type">Service Type:</string>
</resources>