<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_110sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_wallet_tab" />

        <TextView
            style="@style/SmallFontTextView"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/lbl_erl_wallet_balance"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/txtWalletBalance"
            style="@style/SmallFontTextView"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/montserrat_bold"
            android:text="AED 143"
            android:textAllCaps="true"
            android:textColor="@color/colorYellowDark"
            android:textSize="@dimen/_14ssp" />

        <View
            style="@style/ToolbarDivider"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp" />

        <TextView
            style="@style/VerySmallFontTextView"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/lbl_coupon_code_for_add_money_to_wallet"
            android:textColor="@color/colorPrimaryText" />

        <EditText
            android:id="@+id/edtPromoCode"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:background="@drawable/img_dotted_line_rectangle"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:inputType="textCapCharacters"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/txtOk"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:background="@color/colorPrimaryText"
            android:gravity="center"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/txtViewTransactionHistory"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@color/colorPrimaryText"
            android:gravity="center"
            android:text="@string/lbl_view_transaction_history"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_9ssp" />

    </LinearLayout>
</layout>
