<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/img_success_order" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/lbl_payment_success_title"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/lbl_payment_success_sub_title"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@color/colorBlack"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:paddingStart="@dimen/_30sdp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingEnd="@dimen/_30sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:text="@string/lbl_home"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_10ssp" />

    </RelativeLayout>
</layout>