<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/routMainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_16sdp">

        <TextView
            style="@style/SmallFontTextView"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/feedback"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_15ssp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:numStars="5"
            android:stepSize="0.5" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:gravity="top"
            android:hint="@string/write_review"
            android:lines="3"
            android:textSize="@dimen/_13ssp" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@drawable/img_button_bg"
            app:mrl_rippleColor="#2C7A7A7A"
            app:mrl_rippleDelayClick="false"
            app:mrl_rippleDuration="100"
            app:mrl_rippleOverlay="true">

            <TextView
                android:id="@+id/txtSubmit"
                style="@style/SmallFont"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp" />
        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>
</layout>


