<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="info"
            type="com.app.erl.model.entity.info.OrderInfo" />
    </data>

    <LinearLayout
        android:id="@+id/routMainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_12sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/routStatusView"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/VerySmallFontTextView"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/lbl_order_number"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryText" />

                <TextView
                    android:id="@+id/txtOrderNUmber"
                    style="@style/VerySmallFontTextView"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@{info.order_no}"
                    android:textColor="@color/colorPrimaryText" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/routStatusView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/VerySmallFontTextView"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:text="@string/lbl_order_status"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryText" />

                    <TextView
                        android:id="@+id/txtStatus"
                        style="@style/VerySmallFontTextView"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@{info.status}"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryText" />

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp">

            <TextView
                android:id="@+id/txtServiceTypeTitle"
                style="@style/VerySmallFontTextView"
                android:layout_centerVertical="true"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/service_type"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryText" />

            <TextView
                android:id="@+id/txtServiceType"
                style="@style/VerySmallFontTextView"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_toEndOf="@+id/txtServiceTypeTitle"
                android:fontFamily="@font/montserrat_regular"
                android:text="@{info.service_type_name}"
                android:textColor="@color/colorPrimaryText" />

            <TextView
                android:id="@+id/txtDate"
                style="@style/SmallFontTextView"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/montserrat_regular"
                android:text="@{info.pickup_date}"
                android:textColor="@color/colorSecondaryLightText"
                android:textSize="@dimen/_9ssp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <TextView
                    style="@style/VerySmallFontTextView"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/lbl_order_amount"
                    android:textAllCaps="true"
                    android:textColor="@color/colorSecondaryLightText"
                    android:textSize="@dimen/_9ssp" />

                <TextView
                    android:id="@+id/txtPrice"
                    style="@style/VerySmallFontTextView"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_9ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/VerySmallFontTextView"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/lbl_order_type"
                    android:textAllCaps="true"
                    android:textColor="@color/colorSecondaryLightText"
                    android:textSize="@dimen/_9ssp" />

                <TextView
                    android:id="@+id/txtOrderType"
                    style="@style/VerySmallFontTextView"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@{info.payment_type}"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_9ssp" />

            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:src="@drawable/img_arrow_right_end"
                android:tint="@color/colorYellowDark" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/routButtonsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPay"
                style="@style/VerySmallFontTextView"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:background="@drawable/img_button_bg"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/lbl_pay"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:visibility="gone" />

            <View
                android:id="@+id/dividerButtons"
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtGiveFeedback"
                style="@style/VerySmallFontTextView"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:background="@drawable/img_button_bg"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/feedback"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:visibility="gone" />

        </LinearLayout>


        <View
            style="@style/Divider"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/colorYellowDark" />

    </LinearLayout>
</layout>


